fixed invalid link and gap/font sizes

--- a/src/components/Body/Features/Features.module.css
+++ b/src/components/Body/Features/Features.module.css
@@ -38,10 +38,16 @@
 }
 
 @media (min-width: 750px) {
+    .features{
+        margin-top: 5rem; 
+    }
     .featuresBox{
         flex-direction: row;
         gap: 2rem; 
         margin-bottom: 7rem; 
+    }
+    .title{
+        font-size: 2.3rem;
     }
     .textBox{
         margin-bottom: 2rem;
