--- a/src/components/Body/LinkShortener/LinkShortener.module.css
+++ b/src/components/Body/LinkShortener/LinkShortener.module.css
@@ -74,4 +74,9 @@
     width: 100%; 
     height: 100%; 
   }
+
+  .invalidMsg{
+    bottom: -30px; 
+    left: 16px; 
+  }
 }
